# neural-network-recognizers

./: .gitignore  Dockerfile-dev  README.md  pyproject.toml
experiments/: include.bash  job.bash  setup.bash  singularity_exec.bash  singularity_shell.bash  submit_job.bash
experiments/analysis/: plot_cross_entropy_vs_edit_distance.bash  plot_cross_entropy_vs_length.bash  print_full_tables.bash  print_hardest_examples.bash  print_main_tables.bash
experiments/dataset_generation/: submit_prepare_automaton_language_jobs.bash  submit_prepare_hand_coded_language_jobs.bash  submit_prepare_test_edit_distance_jobs.bash
experiments/training/: submit_rerun_evaluate_jobs.bash  submit_train_and_evaluate_jobs.bash
scripts/: docker_exec.bash  generate_code_submission.bash  setup.bash  singularity_shell.bash  variables.bash
src/rayuela/base/: alphabet.py  misc.py  semiring.py  state.py  string.py  symbol.py
src/rayuela/cfg/: bilexical_grammar.py  brzozowski.py  cfg.py  dependency.py  examples.py  labeled_cfg.py  misc.py  nonterminal.py  parser.py  pda.py  production.py  random.py  sampler.py  transformer.py  treesum.py
src/rayuela/fsa/: aggregator.py  angluin.py  arc.py  beimel.py  cc.py  examples.py  fsa.py  fsa_classes.py  fst.py  generator.py  hankel.py  learning.py  pathsum.py  random.py  sampler.py  scc.py  trainer.py  transformer.py  utils.py
src/recognizers/: functions.bash
src/recognizers/analysis/: plot_util.py  (+9 more)
tests/: test_counting_semiring.py  test_edit_distance.py  test_finite_automaton_allsum.py  test_log_counting_semiring.py  test_padded_batch.py
(+56 files in other folders)
