[tool.poetry]
name = "neural-network-recognizers"
version = "0.1.0"
description = "Code for the paper Training Neural Networks as Recognizers of Formal Languages."
authors = ["Brian DuSell <bdusell@inf.ethz.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.1.0"
rau = {git = "git@github.com:bdusell/rau.git", rev = "28695a0e92436bd0354cd630b0443f122be123ec"}
scipy = "^1.13.1"
matplotlib = "^3.9.0"
frozendict = "^2.4.6"

[tool.poetry.dev-dependencies]
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
